syntax = "proto3";

package aspb;

import "shpb/anime_image.proto";
import "aspb/anime_serie.proto";

option go_package = "github.com/dj-yacine-flutter/gojo/pb/aspb";

message CreateAnimeSerieImageRequest {
  int64                  animeID     = 1;
  shpb.AnimeImageRequest animeImages = 2;
}

message CreateAnimeSerieImageResponse {
  AnimeSerieResponse      animeSerie  = 1;
  shpb.AnimeImageResponse animeImages = 2;
}